================
Next Version
================

================
bst-external 0.6
================

  o New git-tag plugin: An extension to the BuildStream git plugin
    which allows automatic tracking of the latest tag in a branch.

==================
bst-external 0.5.1
==================

  o collect-integration: Fix the collect-integration plugin not being loadable
    via pip

================
bst-external 0.5
================

  o flatpak-image: Preserve case-sensitivity of flatpak metadata.

================
bst-external 0.4
================

  o Introducing James Ennis as co-maintainer
  o dpkg-build: The debian/rules file no longer has to be made executable
  o Installation no longer erroneously installs the tests
  o README.md includes documentation for how to use and install it
  o The test suite can now be run in versions of buildstream that forbid paths
    leading outside the project.
  o The Collect Integration Element has been imported from the freedesktop-sdk
    project. This plugin collects the integration commands of all its
    dependencies into a single shell script.


==================
bst-external 0.3.1
==================

  o Updated the version in setup.py for the latest version, and updated the
    release process so this is less likely to happen again.

================
bst-external 0.3
================

  o The FlatPak Image Element now creates directories for each extension
    defined in the metadata when built.

================
bst-external 0.2
================

  o `url` key of `docker` source plugin is now deprecated. `registry-url`
    and `image` keys should be used instead. Users of the plugin should
    either:
    - update their element definitions (recommended), or
    - continue using an older version of bst-external.

================
bst-external 0.1
================

First release of bst-external. API is not considered stable yet.
Plugins added in this release:
