@@ -8,6 +8,10 @@ bst-external 0.6
 
   o New git-tag plugin: An extension to the BuildStream git plugin
     which allows automatic tracking of the latest tag in a branch.
+  o fastboot_bootimg Element - Uses artifacts generated by buildstream to produce an
+    image that can be flashed to the boot partition using fastboot.
+  o fastboot_ext4 Element - Uses artifacts generated by buildstream to produce an
+    ext4sparse image that can be flashed to userdata partitions or others using fastboot.
 
 ==================
 bst-external 0.5.1
